<resources>
    <string name="app_name">My Application</string>
    <string name="error_message">Error!</string>
    <string name="name_hint">Insert your name</string>
    <string name="name_value">...</string>
    <string name="button_name_value">Submit</string>
    <string name="name_greet">Name: </string>
    <string name="name_empty">Field is empty!</string>
    <string name="number_hint">Enter your student number</string>
    <string name="number_value">NIM:</string>
</resources>