<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/screen_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/display_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.023">

        <TextView
            android:id="@+id/name_display"
            style="@style/text_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_value"
            android:gravity="center" />

        <TextView
            android:id="@+id/number_display"
            style="@style/text_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_value"
            android:gravity="center"
            android:visibility="gone" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_input"
        android:hint="@string/name_hint"
        app:layout_constraintTop_toBottomOf="@id/display_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/number_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_input"
        android:hint="@string/number_hint"
        app:layout_constraintTop_toBottomOf="@id/name_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="11"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/name_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button"
        android:text="@string/button_name_value"
        app:layout_constraintTop_toBottomOf="@id/number_wrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>